--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -30,10 +30,62 @@ IDLojaNum='<IDLojaNum>';
 <script src='<PathTo file="htm/js/ScrollToTheTop.js">'></script>
 <script src='<PathTo file="htm/js/tinynav.js">'></script>
 
+<div id="mySidenav" class="sidenav visible-xs">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <br><br>
+
+  <script>
+   if(""!="<NomeCliente>")
+    {document.write("<a onclick='closeNav()'>Ol&aacute;, <NomeCliente></a>")}
+   else
+    {document.write("<a onclick='closeNav()'>Ol&aacute;, visitante!</a>")}
+  </script>
+
+  <script>
+   if(""=="<NomeCliente>")
+    {document.write("<a onclick='closeNav()' href='/cadastro.asp?idloja=<IDLojaNum>&pp=3&passo=1&sit=1'><span class='glyphicon glyphicon-log-in' aria-hidden='true'>&nbsp;</span>Login ou Cadastro </a>")}
+  </script>
+
+  <a onclick="closeNav()" href="/account.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-list-alt" aria-hidden="true">&nbsp;</span>Meus Dados</a>
+
+  <a onclick="closeNav()" href="/account.asp?idloja=<IDLojaNum>&orders=1
+  "><span class="glyphicon glyphicon-gift" aria-hidden="true">&nbsp;</span>Meus Pedidos</a>
+
+  <a onclick="closeNav()" href="/addProduto.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-usd" aria-hidden="true">&nbsp;</span>Sacola: R$ <ValorCesta></a>
+
+  <a onclick="closeNav()" href="/addProduto.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true">&nbsp;</span>Itens: <QtdCesta></a>
+              
+  <script>
+   if(""!="<NomeCliente>")
+    {document.write("<a onclick='closeNav()' href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1'><span class='glyphicon glyphicon-log-out' aria-hidden='true'>&nbsp;</span>Sair</a>")}
+  </script>
+
+  <br><hr>
+
+  <a onclick="closeNav()" href="/faleconosco.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-envelope" aria-hidden="true">&nbsp;</span>Contato</a>
+
+  <a onclick="closeNav()" href="/indique.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true">&nbsp;</span>Indique a Loja</a>
+
+  <a onclick="closeNav()" href="/newsletter.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true">&nbsp;</span>Newsletter</a>
+
+  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,promocao,1,ofertas.htm"><span class="glyphicon glyphicon-tags" aria-hidden="true">&nbsp;</span>Promo&ccedil;&otilde;es</a>
+
+  <a onclick="closeNav()" href="/buscaavancada.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-search" aria-hidden="true">&nbsp;</span>Busca Detalhada</a>
+
+  <br><hr>
+
+  <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/cabos-36814517">Cabos</a>
+  <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/capas-78428286">Capas</a>
+  <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/fones-78252810">Fones</a>
+  <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/peliculas-56515139">Pel&iacute;culas</a>
+  <br>
+
+</div>
+
 <nav id="mypage" data-spy="scroll" data-target=".navbar" data-offset="60" lang="pt" class="navbar navbar-default navbar-fixed-top linear-grad menus">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" onclick="openNav()">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -44,7 +96,7 @@ IDLojaNum='<IDLojaNum>';
         <img width="200px" height="38px" class="img-rounded logo" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/LogoTopo.png" alt="logo">
       </a>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
+    <div class="collapse navbar-collapse hidden-xs" id="myNavbar">
       <ul class="nav navbar-nav navbar-right font-custom item-custom">
         <li><a href="https://www.tuning-phone.com.br/c/cabos-36814517">Cabos</a></li>
         <li><a href="https://www.tuning-phone.com.br/c/capas-78428286">Capas</a></li>
@@ -95,5 +147,17 @@ IDLojaNum='<IDLojaNum>';
 </nav>
 
 <br/><br/><br/>
+
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "200px";
+    document.getElementById("mypage").style.marginLeft = "200px";
+}
+
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("mypage").style.marginLeft= "0";
+}
+</script>
 
 
