menu lateral tuning-phone

--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -92,7 +92,7 @@ IDLojaNum='<IDLojaNum>';
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="https://www.tuning-phone.com.br/" id="logo">
+      <a href="<StoreDomain>" id="logo">
         <img width="200px" height="38px" class="img-rounded logo" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/LogoTopo.png" alt="logo">
       </a>
     </div>
