estilos menu lateral mobile

--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -60,30 +60,30 @@ IDLojaNum='<IDLojaNum>';
     {document.write("<a onclick='closeNav()' href='cadastro.asp?IDLoja=<IDLoja>&pp=3&logoff=1'><span class='glyphicon glyphicon-log-out' aria-hidden='true'>&nbsp;</span>Sair</a>")}
   </script>
 
-  <br><hr>
+  <hr>
 
   <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/cabos-36814517">Cabos</a>
   <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/capas-78428286">Capas</a>
   <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/fones-78252810">Fones</a>
   <a onclick="closeNav()" href="https://www.tuning-phone.com.br/c/peliculas-56515139">Pel&iacute;culas</a>
 
-  <br><hr>
+  <hr>
 
-  <a onclick="closeNav()" href="/faleconosco.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-envelope" aria-hidden="true">&nbsp;</span>Contato</a>
+  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,lancamento,1,novidades.htm"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Lan&ccedil;amentos</a>
 
-  <a onclick="closeNav()" href="/indique.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true">&nbsp;</span>Indique a Loja</a>
+  <a onclick="closeNav()" href="/indique.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> Indique a loja</a>
 
-  <a onclick="closeNav()" href="/newsletter.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true">&nbsp;</span>Newsletter</a>
+  <a onclick="closeNav()" href="/newsletter.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> Newsletter</a>
 
-  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,promocao,1,ofertas.htm"><span class="glyphicon glyphicon-tags" aria-hidden="true">&nbsp;</span>Promo&ccedil;&otilde;es</a>
+  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,promocao,1,ofertas.htm"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Promo&ccedil;&otilde;es</a>
 
-  <a onclick="closeNav()" href="/buscaavancada.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-search" aria-hidden="true">&nbsp;</span>Busca Detalhada</a>
+  <a onclick="closeNav()" href="/buscaavancada.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Busca detalhada</a>
 
   <br>
 
 </div>
 
-<nav id="mypage" data-spy="scroll" data-target=".navbar" data-offset="60" lang="pt" class="navbar navbar-default navbar-fixed-top linear-grad menus">
+<div id="mypage" data-spy="scroll" data-target=".navbar" data-offset="60" lang="pt" class="navbar navbar-default navbar-fixed-top linear-grad menus">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" onclick="openNav()">
@@ -145,7 +145,7 @@ IDLojaNum='<IDLojaNum>';
       </ul>
     </div>
   </div>
-</nav>
+</div>
 
 <br/><br/><br/>
 
