ajustes de navegabilidade

--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -85,7 +85,7 @@ IDLojaNum='<IDLojaNum>';
 
 <div id="mypage" class="container" data-spy="scroll" data-target=".navbar" data-offset="60">
   <nav class="navbar navbar-default navbar-fixed-top linear-grad menus">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" onclick="openNav()">
           <span class="icon-bar"></span>
