--- a/htm/home.htm
+++ b/htm/home.htm
@@ -395,7 +395,7 @@
 
   <br/>
 
-  <div class="navbar navbar-default navbar-fixed-bottom linear-grad menus">
+  <div class="hidden-xs navbar navbar-default navbar-fixed-bottom linear-grad menus">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar2">
