ajustes de design menu lateral

--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -34,6 +34,8 @@ IDLojaNum='<IDLojaNum>';
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <br><br>
 
+  <a onclick="closeNav()" href="<StoreDomain>"><span class="glyphicon glyphicon-home" aria-hidden="true">&nbsp;</span>Home</a>
+
   <script>
    if(""!="<NomeCliente>")
     {document.write("<a onclick='closeNav()'>Ol&aacute;, <NomeCliente></a>")}
@@ -153,8 +155,8 @@ IDLojaNum='<IDLojaNum>';
 
 <script>
 function openNav() {
-    document.getElementById("mySidenav").style.width = "200px";
-    document.getElementById("mypage").style.marginLeft = "200px";
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("mypage").style.marginLeft = "250px";
 }
 
 function closeNav() {
