--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -73,13 +73,13 @@ IDLojaNum='<IDLojaNum>';
 
   <hr>
 
-  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,lancamento,1,novidades.htm"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Lan&ccedil;amentos</a>
+  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,lancamento,1,novidades.htm"><span class="glyphicon glyphicon-refresh" aria-hidden="true">&nbsp;</span> Lan&ccedil;amentos</a>
 
-  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,promocao,1,ofertas.htm"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Promo&ccedil;&otilde;es</a>
+  <a onclick="closeNav()" href="/prod,idloja,<IDLojaNum>,promocao,1,ofertas.htm"><span class="glyphicon glyphicon-tags" aria-hidden="true">&nbsp;</span> Promo&ccedil;&otilde;es</a>
 
-  <a onclick="closeNav()" href="/indique.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span> Indique a loja</a>
+  <a onclick="closeNav()" href="/indique.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-star-empty" aria-hidden="true">&nbsp;</span> Indique a loja</a>
 
-  <a onclick="closeNav()" href="/newsletter.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> Newsletter</a>
+  <a onclick="closeNav()" href="/newsletter.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true">&nbsp;</span> Newsletter</a>
 
   <br>
 
