--- a/htm/home.htm
+++ b/htm/home.htm
@@ -1,3 +1,29 @@
+<!-- PopNews -->
+<script language="JavaScript" src="/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="<BaseLoja>htm/popnews/jQueryCookie.js"></script>
+<script type="text/javascript" src="<BaseLoja>htm/popnews/popnews.js"></script>
+<link type="text/css" rel="stylesheet" href="<BaseLoja>htm/popnews/popnews.css">
+<div id="FullBackground"></div>
+<div id="popupNews">
+<a href="#" class="btnClose">
+<img src="<BaseLoja>images/popnews/closePopup.png" width="24" height="24" alt="" border="0">
+</a>
+<h1><NomeLoja></h1>
+<span>Cadastre-se e aproveite nossas ofertas incríveis!</span><br>
+<form class="formNews" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
+<input type=hidden name=IDLoja value="<idloja>">
+<input type=hidden name=Y value="<Y>">
+<input type=hidden name=FormatoHTML value="True">
+<input type=hidden name=EnviarAssinante value="Enviar">
+<input type="text" required name=NomeAssinante placeholder="Nome">
+<input type="email" required name=Email placeholder="Seu e-mail"><br><br>
+<input type="submit" class="bt_news btnSubPop" name=ok value="" />
+</form>
+</div>
+<script type="text/javascript">PopNews();</script>
+<!-- PopNews -->
+
+
 <!-- Begin Home -->
 <div>
   <div class="header text-center">
