otimização de parametros da loja

--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -102,10 +102,10 @@ IDLojaNum='<IDLojaNum>';
       </div>
       <div class="collapse navbar-collapse hidden-xs" id="myNavbar">
         <ul class="nav navbar-nav navbar-right font-custom item-custom">
-          <li><a href="https://www.tuning-phone.com.br/c/cabos-36814517">Cabos</a></li>
-          <li><a href="https://www.tuning-phone.com.br/c/capas-78428286">Capas</a></li>
-          <li><a href="https://www.tuning-phone.com.br/c/fones-78252810">Fones</a></li>
-          <li><a href="https://www.tuning-phone.com.br/c/peliculas-56515139">Pel&iacute;culas</a></li>
+          <li><a href="<StoreDomain>/c/cabos-36814517">Cabos</a></li>
+          <li><a href="<StoreDomain>/c/capas-78428286">Capas</a></li>
+          <li><a href="<StoreDomain>/c/fones-78252810">Fones</a></li>
+          <li><a href="<StoreDomain>/c/peliculas-56515139">Pel&iacute;culas</a></li>
 
           <li class="dropdown">
             <a class='dropbtn'>OP&Ccedil;&Otilde;ES <span class='caret'></span></a>
