--- a/htm/home.htm
+++ b/htm/home.htm
@@ -9,7 +9,7 @@
 <img src="<BaseLoja>images/popnews/closePopup.png" width="24" height="24" alt="" border="0">
 </a>
 <h1><NomeLoja></h1>
-<span>Cadastre-se e aproveite nossas ofertas incríveis!</span><br>
+<span>Cadastre-se e aproveite nossas ofertas incr&iacute;veis!</span><br>
 <form class="formNews" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
 <input type=hidden name=IDLoja value="<idloja>">
 <input type=hidden name=Y value="<Y>">
