espaçamento na busca detalhada

--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -57,7 +57,7 @@ IDLojaNum='<IDLojaNum>';
 
   <a onclick="closeNav()" href="/addProduto.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true">&nbsp;</span>Itens: <QtdCesta></a>
 
-  <a onclick="closeNav()" href="/buscaavancada.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Busca detalhada</a>
+  <a onclick="closeNav()" href="/buscaavancada.asp?idloja=<IDLojaNum>"><span class="glyphicon glyphicon-search" aria-hidden="true">&nbsp;</span> Busca detalhada</a>
               
   <script>
    if(""!="<NomeCliente>")
