--- a/htm/home.htm
+++ b/htm/home.htm
@@ -8,8 +8,8 @@
 <a href="#" class="btnClose">
 <img src="<BaseLoja>images/popnews/closePopup.png" width="24" height="24" alt="" border="0">
 </a>
-<h1><NomeLoja></h1>
-<span>Cadastre-se e aproveite nossas ofertas incr&iacute;veis!</span><br>
+<h1><NomeLoja></h1><br>
+<span>Torne-se membro do nosso clube de assinantes e receba novidades diretamente em seu e-mail. &Eacute; r&aacute;pido, f&aacute;cil e gratuito!</span><br><br>
 <form class="formNews" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
 <input type=hidden name=IDLoja value="<idloja>">
 <input type=hidden name=Y value="<Y>">
