--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -32,8 +32,9 @@
         <div class="col-sm-6" >
           <h4>Entenda nossas pol&iacute;ticas</h4> 
           O frete n&atilde;o est&aacute; incluso nos pre&ccedil;os e &eacute; por conta do cliente. Os pedidos somente ser&atilde;o postados ap&oacute;s confirma&ccedil;&atilde;o de pagamento. &Eacute; de responsabilidade do cliente a veracidade e exatid&atilde;o das informa&ccedil;&otilde;es referentes a endere&ccedil;os de entrega.</br></br> 
-          DEVOLU&Ccedil;&Atilde;O: O cliente tem at&eacute; 7 dias corridos (contados &agrave; partir da data de recebimento da mercadoria) para desist&ecirc;ncia de qualquer compra realizada, desde que a mercadoria esteja da mesma forma em que foi entregue (lacrada, com todos os itens e em perfeitas condi&ccedil;&otilde;es). O cliente arcar&aacute; com os custos de envio do produto para a <strong>tuning-phone&reg;</strong> e receber&aacute; a devolu&ccedil;&atilde;o do valor pago (com exce&ccedil;&atilde;o do frete).</br></br>
-          DEFEITOS DE FABRICA&Ccedil;&Atilde;O: O cliente tem at&eacute; 30 dias corridos (contados &agrave; partir da data de recebimento da mercadoria) para comunicar a tuning-phone&reg; sobre qualquer v&ccedil;cio aparente observado na mercadoria adquirida.</br></br>
+          <b>DEVOLU&Ccedil;&Atilde;O:</b> O cliente tem at&eacute; 7 dias corridos (contados &agrave; partir da data de recebimento da mercadoria) para desist&ecirc;ncia de qualquer compra realizada, desde que a mercadoria esteja da mesma forma em que foi entregue (lacrada, com todos os itens e em perfeitas condi&ccedil;&otilde;es). O cliente arcar&aacute; com os custos de envio do produto para a <strong>tuning-phone&reg;</strong> e receber&aacute; a devolu&ccedil;&atilde;o do valor pago (com exce&ccedil;&atilde;o do frete).</br></br>
+          <b>DEFEITOS DE FABRICA&Ccedil;&Atilde;O:</b> O cliente tem at&eacute; 30 dias corridos (contados &agrave; partir da data de recebimento da mercadoria) para comunicar a tuning-phone&reg; sobre qualquer v&iacute;cio aparente observado na mercadoria adquirida.</br></br>
+          <b>GARANTIA:</b> Todos os produtos possuem 90 dias de garantia &agrave; partir da data de recebimento da mercadoria.</br></br>
           Para ambos os casos, basta entrar em contato conosco atrav&eacute;s de WhatsApp, Telefone ou E-mail.
 
         </div>
