--- a/htm/home.htm
+++ b/htm/home.htm
@@ -6,7 +6,7 @@
 <div id="FullBackground"></div>
 <div id="popupNews">
 <a href="#" class="btnClose">
-<img src="<BaseLoja>images/popnewsbtnClosePop.png" alt="" border="0">
+<img src="<BaseLoja>images/popnews/btnClosePop.png" alt="" width="30px" border="0">
 </a>
 <span>Cadastre-se e receba novidades e ofertas imperd&iacute;veis!</span><br><br>
 <form class="formNews" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
