--- a/htm/home.htm
+++ b/htm/home.htm
@@ -10,7 +10,7 @@
       <a href="#" class="btnClose">
       <img src="<BaseLoja>images/popnews/btnClosePop.png" alt="" width="30px" border="0">
       </a><br>
-      <span>Cadastre-se e receba novidades e ofertas imperd&iacute;veis!</span><br><br>
+      <div class="msg">Cadastre-se e receba novidades e ofertas imperd&iacute;veis!</div><br><br>
       <form class="form-inline" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
         <div class="form-group">
           <input type=hidden name=IDLoja value="<idloja>">
