--- a/htm/home.htm
+++ b/htm/home.htm
@@ -23,7 +23,7 @@
         <div class="form-group">
           <input type="email" required name=Email placeholder="Seu e-mail" maxlength="60">
         </div>
-        <button type="submit" class="form-control btn btn-primary btnSubPop">Enviar</button>
+        <button type="submit" class="form-control btn btnSubPop">Enviar</button>
       </form>
     </div>
   </div>
