--- a/htm/home.htm
+++ b/htm/home.htm
@@ -10,7 +10,7 @@
       <a href="#" class="btnClose">
       <img src="<BaseLoja>images/popnews/btnClosePop.png" alt="" width="30px" border="0">
       </a><br>
-      <div class="msg">Cadastre-se e receba novidades</div>
+      <div class="msg">Cadastre-se para receber novidades</div>
       <div class="msg">e ofertas imperd&iacute;veis!</div><br><br>
       <form id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
         <div class="form-group">
@@ -23,7 +23,7 @@
         <div class="form-group">
           <input type="email" required name=Email placeholder="Seu e-mail" maxlength="60">
         </div>
-        <button type="submit" class="form-control btn btnSubPop">Enviar</button>
+        <button type="submit" class="btnSubPop">Enviar</button>
       </form>
     </div>
   </div>
