--- a/htm/home.htm
+++ b/htm/home.htm
@@ -9,9 +9,9 @@
     <div class="col-sm-12 col-md-12 col-lg-12">
       <a href="#" class="btnClose">
       <img src="<BaseLoja>images/popnews/btnClosePop.png" alt="" width="30px" border="0">
-      </a><br>
+      </a>
       <div class="msg">Cadastre-se para receber novidades</div>
-      <div class="msg">e ofertas imperd&iacute;veis!</div><br><br>
+      <div class="msg">e ofertas imperd&iacute;veis!</div><br>
       <form id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
         <div class="form-group">
           <input type=hidden name=IDLoja value="<idloja>">
