--- a/htm/home.htm
+++ b/htm/home.htm
@@ -10,8 +10,7 @@
       <a href="#" class="btnClose">
       <img src="<BaseLoja>images/popnews/btnClosePop.png" alt="" width="30px" border="0">
       </a>
-      <div class="msg">Cadastre-se para receber novidades</div>
-      <div class="msg">e ofertas imperd&iacute;veis!</div><br>
+      <div class="msg">Cadastre-se para receber novidades e ofertas imperd&iacute;veis!</div>
       <form id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
         <div class="form-group">
           <input type=hidden name=IDLoja value="<idloja>">
