--- a/htm/home.htm
+++ b/htm/home.htm
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12"><br>
       <div class="msg">Quer receber novidades</div>
-      <div class="msg">e promoções exclusivas por e-mail?</div><br>
+      <div class="msg">e promo&ccedil;&otilde;es?</div><br>
       <form id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
         <div class="form-group">
           <input type=hidden name=IDLoja value="<idloja>">
