--- a/htm/home.htm
+++ b/htm/home.htm
@@ -8,14 +8,14 @@
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12"><br>
       <div class="msg text-right">Quer receber novidades</div>
-      <div class="msg text-right">e promo&ccedil;&otilde;es?</div><br>
+      <div class="msg text-right">e promo&ccedil;&otilde;es por e-mail?</div><br>
       <form id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
         <div class="form-group">
           <input type=hidden name=IDLoja value="<idloja>">
           <input type=hidden name=Y value="<Y>">
           <input type=hidden name=FormatoHTML value="True">
           <input type=hidden name=EnviarAssinante value="Enviar">
-          <input type="text" required name=NomeAssinante placeholder="Nome" maxlength="60">
+          <input type="text" required name=NomeAssinante placeholder="Seu nome" maxlength="60">
         </div>
         <div class="form-group">
           <input type="email" required name=Email placeholder="Seu e-mail" maxlength="60">
