texto popup newsletters

--- a/htm/home.htm
+++ b/htm/home.htm
@@ -20,7 +20,7 @@
         <div class="form-group">
           <input type="email" required name=Email placeholder="Seu e-mail" maxlength="60">
         </div>
-        <button type="submit" class="btnSubPop">Com certeza</button>
+        <button type="submit" class="btnSubPop">Cadastrar</button>
         <button type="submit" class="btnClose">Agora n&atilde;o</button>
       </form>
     </div>
