--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -30,6 +30,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="newsletters">
+          <div class="msg">Não deixe de receber nossas nofidades e promoções exclusivas!</div>
+          <br><br><br>
           <form class="form-inline" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();">
             <input type=hidden name=IDLoja value="<idloja>">
             <input type=hidden name=Y value="<Y>">
@@ -38,16 +40,17 @@
 
             <div class="form-group">
               <label class="sr-only" for="inlineFormInput">Nome</label>
-              <input type="text" class="form-control" id="inlineFormInput" required name=NomeAssinante placeholder="Nome" maxlength="60">
+              <input type="text" class="form-control" id="inlineFormInput" required name=NomeAssinante placeholder="Nome" maxlength="60" size="50">
             </div>
 
             <div class="form-group">
               <label class="sr-only" for="inlineFormInputGroup">E-mail</label>
-              <input type="text" class="form-control" id="inlineFormInputGroup" required name=Email placeholder="E-mail" maxlength="60">
+              <input type="text" class="form-control" id="inlineFormInputGroup" required name=Email placeholder="E-mail" maxlength="60" size="50">
             </div>
 
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
+            <button type="submit" class="btnSubNews">Cadastrar</button>
           </form>
+          <br><br><br>
         </div>
       </div>
     </div>
