--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="newsletters">
-          <div class="msg">Não deixe de receber nossas nofidades e promoções exclusivas!</div>
+          <div class="msg-news">Cadastre-se para receber novidades e promo&ccedil;&otilde;es!</div>
           <br><br><br>
           <form class="form-inline" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();">
             <input type=hidden name=IDLoja value="<idloja>">
@@ -38,17 +38,18 @@
             <input type=hidden name=FormatoHTML value="True">
             <input type=hidden name=EnviarAssinante value="Enviar">
 
-            <div class="form-group">
+            <div class="form-group text-right">
               <label class="sr-only" for="inlineFormInput">Nome</label>
               <input type="text" class="form-control" id="inlineFormInput" required name=NomeAssinante placeholder="Nome" maxlength="60" size="50">
             </div>
 
-            <div class="form-group">
+            <div class="form-group text-left">
               <label class="sr-only" for="inlineFormInputGroup">E-mail</label>
               <input type="text" class="form-control" id="inlineFormInputGroup" required name=Email placeholder="E-mail" maxlength="60" size="50">
+              <button type="submit" class="btnSubNews">Cadastrar</button>
             </div>
 
-            <button type="submit" class="btnSubNews">Cadastrar</button>
+            
           </form>
           <br><br><br>
         </div>
