--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -136,11 +136,14 @@
   <div class="row text-center">
      <span class="text-center FooterTitleTxt">Seguran&ccedil;a</span>
      <div class="container-fluid">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-4">
           <img width="120px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/seal_lets_encrypt_2.svg">
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4">
           <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=tuning-phone.com.br','SiteLock','width=600,height=600,left=160,top=170');" ><img class="img-responsive" alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/tuning-phone.com.br" /></a>
+        </div>
+        <div class="col-sm-4">
+          <a href="https://www.google.com/transparencyreport/safebrowsing/diagnostic/?hl=pt-BR#url=<StoreDomain>" target=_blank><img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/Google_Loja_Segura.svg?cccfc=1" height=50 alt="Seu pedido com Segurança" title="Site Seguro"></a>
         </div>
      </div>
   </div>
