--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -136,17 +136,17 @@
   <div class="row text-center">
      <span class="text-center FooterTitleTxt">Seguran&ccedil;a</span>
      <div class="container-fluid">
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <img width="120px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/seal_lets_encrypt_2.svg" alt="Let's Encrypt" title="Let's Encrypt">
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-2">
           <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=tuning-phone.com.br','SiteLock','width=600,height=600,left=160,top=170');" ><img class="img-responsive" alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/tuning-phone.com.br" /></a>
         </div>
-        <div class="col-sm-3">
-          <a href="https://www.google.com/transparencyreport/safebrowsing/diagnostic/?hl=pt-BR#url=<StoreDomain>" target=_blank><img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/Google_Loja_Segura.svg?cccfc=1" height=70 alt="Seu pedido com Segurança" title="Site Seguro"></a>
+        <div class="col-sm-2">
+          <a href="https://www.google.com/transparencyreport/safebrowsing/diagnostic/?hl=pt-BR#url=<StoreDomain>" target=_blank><img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/Google_Loja_Segura.svg?cccfc=1" height="100" alt="Seu pedido com Segurança" title="Site Seguro"></a>
         </div>
-         <div class="col-sm-3">
-          <img width="120px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/shield2.png">
+         <div class="col-sm-2">
+          <img src="/images/100_https.svg?cccfc=1" height=50 alt="Seu pedido com Segurança" title="100% HTTPS">
         </div>
      </div>
   </div>
