--- a/htm/home.htm
+++ b/htm/home.htm
@@ -379,7 +379,7 @@
 
       <div class="col-sm-12" align="justify">
         <h2 class="font-custom h1-custom">SOBRE</h2><br/>
-        <h4>100% BRASILEIRA, a <strong>tuning-phone&reg;</strong> &eacute; a mais nova loja de acess&oacute;rios para smartphones na internet. Todos os produtos s&atilde;o vendidos atrav&eacute;s da pr&oacute;pria loja, marketplaces e redes sociais pelos melhores pre&ccedil;os e com condi&ccedil;&otilde;es incr&iacute;veis de pagamento. Clique e nos conhe&ccedil;a tamb&eacute;m no Mercado Livre e Facebook!</h4>
+        <h4>100% BRASILEIRA, a <strong>tuning-phone&reg;</strong> &eacute; a mais nova loja de acess&oacute;rios para smartphones na internet. Todos os produtos s&atilde;o vendidos atrav&eacute;s da pr&oacute;pria loja, marketplaces e redes sociais pelos melhores pre&ccedil;os e com condi&ccedil;&otilde;es incr&iacute;veis de pagamento. Visite-nos tamb&eacute;m no Mercado Livre e Facebook!</h4>
       </div>
 
       <div class="col-sm-4 img-rotate"><br/>
