--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -133,23 +133,31 @@
 
   <br><br>
 
-  <div class="row text-center">
+  <div class="row">
      <span class="text-center FooterTitleTxt">Seguran&ccedil;a</span>
      <div class="container-fluid">
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <img width="120px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/seal_lets_encrypt_2.svg" alt="Let's Encrypt" title="Let's Encrypt">
         </div>
-        <div class="col-sm-2">
-          <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=tuning-phone.com.br','SiteLock','width=600,height=600,left=160,top=170');" ><img class="img-responsive" alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/tuning-phone.com.br" /></a>
+        <div class="col-sm-3">
+          <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=tuning-phone.com.br','SiteLock','width=600,height=600,left=160,top=170');" ><img alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/tuning-phone.com.br" /></a>
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-3">
           <a href="https://www.google.com/transparencyreport/safebrowsing/diagnostic/?hl=pt-BR#url=<StoreDomain>" target=_blank><img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/Google_Loja_Segura.svg?cccfc=1" height="100" alt="Seu pedido com Segurança" title="Site Seguro"></a>
         </div>
-         <div class="col-sm-2">
-          <img src="/images/100_https.svg?cccfc=1" height=50 alt="Seu pedido com Segurança" title="100% HTTPS">
+         <div class="col-sm-3">
+          <img src="/images/100_https.svg?cccfc=1" height="100" alt="Seu pedido com Segurança" title="100% HTTPS">
         </div>
      </div>
   </div>
+
+  <footer class="container-fluid text-center">
+     <div class="row">
+        <a href="#myPage" title="Topo">
+          <span class="glyphicon glyphicon-menu-up"></span>
+        </a>
+      </div>
+  </footer>
 
   <br><br><br><br>
 
@@ -160,8 +168,11 @@ function MostraChatLoja(){popup=window.open("http://www.rumo.com.br/sistema/Chat
 
 <script>
 $(document).ready(function(){
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#mypage']").on('click', function(event) {
+  // Add scrollspy to <body>
+  $('body').scrollspy({target: ".navbar", offset: 50});   
+
+  // Add smooth scrolling on all links inside the navbar
+  $("#mypage a").on('click', function(event) {
     // Make sure this.hash has a value before overriding default behavior
     if (this.hash !== "") {
       // Prevent default anchor click behavior
@@ -171,28 +182,17 @@ $(document).ready(function(){
       var hash = this.hash;
 
       // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
       $('html, body').animate({
         scrollTop: $(hash).offset().top
-      }, 900, function(){
+      }, 800, function(){
    
         // Add hash (#) to URL when done scrolling (default click behavior)
         window.location.hash = hash;
       });
-    } // End if
+    }  // End if
   });
-  
-  $(window).scroll(function() {
-    $(".slideanim").each(function(){
-      var pos = $(this).offset().top;
-
-      var winTop = $(window).scrollTop();
-        if (pos < winTop + 600) {
-          $(this).addClass("slide");
-        }
-    });
-  });
-})
+});
 </script>
 
 
