--- a/htm/barratopo.htm
+++ b/htm/barratopo.htm
@@ -27,6 +27,7 @@ IDLojaNum='<IDLojaNum>';
 <script src='<PathTo file="htm/js/autosuggest.js">'></script>
 <script src='<PathTo file="htm/js/ScrollToTheTop.js">'></script>
 <script src='<PathTo file="htm/js/tinynav.js">'></script>
+<script src='<PathTo file="htm/js/script.js">'></script>
 
 <div id="mySidenav" class="sidenav visible-xs">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
