--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -153,7 +153,7 @@
 
   <footer class="container-fluid text-center">
      <div class="row">
-        <a href="#myPage" title="Topo">
+        <a href="#mypage" title="Topo">
           <span class="glyphicon glyphicon-menu-up"></span>
         </a>
       </div>
@@ -168,11 +168,9 @@ function MostraChatLoja(){popup=window.open("http://www.rumo.com.br/sistema/Chat
 
 <script>
 $(document).ready(function(){
-  // Add scrollspy to <body>
-  $('body').scrollspy({target: ".navbar", offset: 50});   
 
-  // Add smooth scrolling on all links inside the navbar
-  $("#mypage a").on('click', function(event) {
+  // Add smooth scrolling to all links in navbar + footer link
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
     // Make sure this.hash has a value before overriding default behavior
     if (this.hash !== "") {
       // Prevent default anchor click behavior
@@ -182,17 +180,28 @@ $(document).ready(function(){
       var hash = this.hash;
 
       // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
       $('html, body').animate({
         scrollTop: $(hash).offset().top
-      }, 800, function(){
+      }, 900, function(){
    
         // Add hash (#) to URL when done scrolling (default click behavior)
         window.location.hash = hash;
       });
-    }  // End if
+    } // End if
   });
-});
+  
+  $(window).scroll(function() {
+    $(".slideanim").each(function(){
+      var pos = $(this).offset().top;
+
+      var winTop = $(window).scrollTop();
+        if (pos < winTop + 600) {
+          $(this).addClass("slide");
+        }
+    });
+  });
+})
 </script>
 
 
