--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -136,16 +136,16 @@
   <div class="row">
      <span class="text-center FooterTitleTxt">Seguran&ccedil;a</span>
      <div class="container-fluid">
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-center">
           <img width="120px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/seal_lets_encrypt_2.svg" alt="Let's Encrypt" title="Let's Encrypt">
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-center">
           <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=tuning-phone.com.br','SiteLock','width=600,height=600,left=160,top=170');" ><img alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/tuning-phone.com.br" /></a>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 text-center">
           <a href="https://www.google.com/transparencyreport/safebrowsing/diagnostic/?hl=pt-BR#url=<StoreDomain>" target=_blank><img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/Google_Loja_Segura.svg?cccfc=1" height="100" alt="Seu pedido com Segurança" title="Site Seguro"></a>
         </div>
-         <div class="col-sm-3">
+         <div class="col-sm-3 text-center">
           <img src="/images/100_https.svg?cccfc=1" height="100" alt="Seu pedido com Segurança" title="100% HTTPS">
         </div>
      </div>
@@ -166,43 +166,6 @@
 function MostraChatLoja(){popup=window.open("http://www.rumo.com.br/sistema/ChatLogin.asp?IDLoja=<IDLoja>","Chat","top=20,left=20,height=280,width=390,scrollbars=no,resizable=yes");popup.focus();return void(0);}</script>
 <!-- Chat -->
 
-<script>
-$(document).ready(function(){
-
-  // Add smooth scrolling to all links in navbar + footer link
-  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
-    // Make sure this.hash has a value before overriding default behavior
-    if (this.hash !== "") {
-      // Prevent default anchor click behavior
-      event.preventDefault();
-
-      // Store hash
-      var hash = this.hash;
-
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
-      $('html, body').animate({
-        scrollTop: $(hash).offset().top
-      }, 900, function(){
-   
-        // Add hash (#) to URL when done scrolling (default click behavior)
-        window.location.hash = hash;
-      });
-    } // End if
-  });
-  
-  $(window).scroll(function() {
-    $(".slideanim").each(function(){
-      var pos = $(this).offset().top;
-
-      var winTop = $(window).scrollTop();
-        if (pos < winTop + 600) {
-          $(this).addClass("slide");
-        }
-    });
-  });
-})
-</script>
 
 
 
