--- a/htm/rodape.htm
+++ b/htm/rodape.htm
@@ -154,7 +154,7 @@
   <footer class="container-fluid text-center">
      <div class="row">
         <a href="#mypage" title="Topo">
-          <span class="glyphicon glyphicon-menu-up"></span>
+          <img src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/iconscrolltop.png">
         </a>
       </div>
   </footer>
