posicionamento de itens

--- a/htm/home.htm
+++ b/htm/home.htm
@@ -61,7 +61,7 @@
 
   <!-- Container (Pricing Section) -->
   <div id="produtos" class="container-fluid text-center linear-grad-products slideanim">
-    <div class="row ">
+    <div class="row "><br><br>
       <h1 class="font-custom h1-custom">PRODUTOS</h1><br/>
       <div class="text-center">
         <h4 class="font-custom">Cabo USB Lightning para iPhone, iPad e iPod</h4>
@@ -377,7 +377,7 @@
   <div id="sobre" class="container-fluid slideanim">
     <div class="row text-center">
 
-      <div class="col-sm-12" align="justify">
+      <div class="col-sm-12" align="justify"><br><br>
         <h2 class="font-custom h1-custom">SOBRE</h2><br/>
         <h4>100% BRASILEIRA, a <strong>tuning-phone&reg;</strong> &eacute; a mais nova loja de acess&oacute;rios para smartphones na internet. Todos os produtos s&atilde;o vendidos atrav&eacute;s da pr&oacute;pria loja, marketplaces e redes sociais pelos melhores pre&ccedil;os e com condi&ccedil;&otilde;es incr&iacute;veis de pagamento. Visite-nos tamb&eacute;m no Mercado Livre e Facebook!</h4>
       </div>
@@ -404,6 +404,7 @@
 
   <!-- Container (diferenciais Section) -->
   <div id="diferenciais" class="container-fluid text-center bg-grey slideanim">
+    <br><br>
     <h2 class="font-custom h1-custom">DIFERENCIAIS</h2><br/>
     <br>
     <div class="row">
