ajustes de layout

--- a/htm/home.htm
+++ b/htm/home.htm
@@ -377,25 +377,25 @@
   <div id="sobre" class="container-fluid slideanim">
     <div class="row text-center">
 
-      <div class="col-sm-12" align="justify">
+      <div class="col-sm-12">
         <br><br>
         <h2 class="font-custom h1-custom">SOBRE</h2><br/>
         <h4>100% BRASILEIRA, a <strong>tuning-phone&reg;</strong> &eacute; a mais nova loja de acess&oacute;rios para smartphones na internet. Todos os produtos s&atilde;o vendidos atrav&eacute;s da pr&oacute;pria loja, marketplaces e redes sociais pelos melhores pre&ccedil;os e com condi&ccedil;&otilde;es incr&iacute;veis de pagamento. Visite-nos tamb&eacute;m no Mercado Livre e Facebook!</h4>
       </div>
 
       <div class="col-sm-4 img-rotate"><br/>
-        <img width="250px" height="250px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/empresa-brasileira-min.jpg" class="img-rounded img-circle" alt="Brasil" title="Brasil">
+        <img width="128px" height="128px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/empresa-brasileira-min.jpg" class="img-rounded img-circle" alt="Brasil" title="Brasil">
       </div>
 
       <div class="col-sm-4 img-rotate"><br/>
         <a href="http://lista.mercadolivre.com.br/_CustId_246301810" target="_blank" id="Mercado Livre">
-          <img width="275px" height="275px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/loja_ml.png" alt="Mercado Livre" title="Mercado Livre">
+          <img width="128px" height="128px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/loja_ml.png" alt="Mercado Livre" title="Mercado Livre">
         </a>
       </div>
 
       <div class="col-sm-4 img-rotate"><br/>
         <a href="https://web.facebook.com/lojatuningphone/" target="_blank" id="Facebook">
-          <img width="250px" height="250px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/loja_face.png" alt="Facebook" title="Facebook">
+          <img width="128px" height="128px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/loja_face.png" alt="Facebook" title="Facebook">
         </a>
       </div>
     </div>
@@ -428,6 +428,52 @@
   </div>
 
   <br/>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="newsletters">
+        <div class="msg-news">Cadastre-se para receber novidades e promo&ccedil;&otilde;es!</div>
+        <form class="form-inline" id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();">
+          <input type=hidden name=IDLoja value="<idloja>">
+          <input type=hidden name=Y value="<Y>">
+          <input type=hidden name=FormatoHTML value="True">
+          <input type=hidden name=EnviarAssinante value="Enviar">
+
+          <div class="form-group text-right">
+            <label class="sr-only" for="inlineFormInput">Nome</label>
+            <input type="text" class="form-control" id="inlineFormInput" required name=NomeAssinante placeholder="Nome" maxlength="60" size="40">
+          </div>
+
+          <div class="form-group text-left">
+            <label class="sr-only" for="inlineFormInputGroup">E-mail</label>
+            <input type="text" class="form-control" id="inlineFormInputGroup" required name=Email placeholder="E-mail" maxlength="60" size="60">
+            <button type="submit" class="btnSubNews">Cadastrar</button>
+          </div>            
+        </form>
+      </div>
+    </div>
+
+    <br/>
+
+    <div class="container-fluid info">
+      <div class="row col-sm-12" align="justify">
+        <div class="col-sm-6" >
+          <h4>Entenda nossas pol&iacute;ticas</h4> 
+          O frete n&atilde;o est&aacute; incluso nos pre&ccedil;os e &eacute; por conta do cliente. Os pedidos somente ser&atilde;o postados ap&oacute;s confirma&ccedil;&atilde;o de pagamento. &Eacute; de responsabilidade do cliente a veracidade e exatid&atilde;o das informa&ccedil;&otilde;es referentes a endere&ccedil;os de entrega.</br></br> 
+          <b>DEVOLU&Ccedil;&Atilde;O:</b> O cliente tem at&eacute; 7 dias corridos (contados &agrave; partir da data de recebimento da mercadoria) para desist&ecirc;ncia de qualquer compra realizada, desde que a mercadoria esteja da mesma forma em que foi entregue (lacrada, com todos os itens e em perfeitas condi&ccedil;&otilde;es). O cliente arcar&aacute; com os custos de envio do produto para a <strong>tuning-phone&reg;</strong> e receber&aacute; a devolu&ccedil;&atilde;o do valor pago (com exce&ccedil;&atilde;o do frete).</br></br>
+          <b>DEFEITOS DE FABRICA&Ccedil;&Atilde;O:</b> O cliente tem at&eacute; 30 dias corridos (contados &agrave; partir da data de recebimento da mercadoria) para comunicar a tuning-phone&reg; sobre qualquer v&iacute;cio aparente observado na mercadoria adquirida.</br></br>
+          <b>GARANTIA:</b> Todos os produtos possuem 90 dias de garantia &agrave; partir da data de recebimento da mercadoria.</br></br>
+          Para ambos os casos, basta entrar em contato conosco atrav&eacute;s de WhatsApp, Telefone ou E-mail.
+
+        </div>
+        <div class="col-sm-6" >
+          <h4>tuning-phone&reg;</h4>
+           Todos os direitos reservados. N&atilde;o nos responsabilizamos por erros descritivos. Quaisquer imagens dos produtos s&atilde;o meramente ilustrativas, podendo variar de acordo com o fornecedor ou configura&ccedil;&otilde;es de v&iacute;deo. Quaisquer objetos que apare&ccedil;am nas imagens junto com o produto n&atilde;o o acompanham, sendo mera demonstra&ccedil;&atilde;o.</br></br>
+           CNPJ&#58;&nbsp;&#50;&#53;&#46;&#51;&#52;&#48;&#46;&#56;&#56;&#48;&#47;&#48;&#48;&#48;&#49;&#55;&#54; | IE&#58;&nbsp;&#49;&#52;&#49;&#46;&#49;&#48;&#55;&#46;&#48;&#54;&#48;&#46;&#49;&#49;&#52;</br>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <nav class="hidden-xs navbar navbar-default navbar-fixed-bottom linear-grad menus">
     <div class="container">
