--- a/htm/home.htm
+++ b/htm/home.htm
@@ -474,11 +474,13 @@
       </div>
     </div>
 
+    <br/><br/>
+
     <!-- Begin Payment and Security -->
     <div class="row text-center">
       <div class="MainContainer">
         <div class="row col-small-12 text-center">
-          <span class="text-center FooterTitleTxt"><tag-FCFooterIconPaymentTitle></span>
+          <span class="text-center FooterTitleTxt">Meios de Pagamento</span>
           <ul class="FooterULPaymentFC">
             <li><img width="80px" height="50px" src="https://www.rumo.com.br/lojas/000<IDLojaNum>/images/visa.png"></li>
 
