--- a/htm/home.htm
+++ b/htm/home.htm
@@ -7,7 +7,7 @@
 <div id="popupNews" class="container">
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12"><br>
-      <div class="msg text-center">Quer receber novidades e promo&ccedil;&otilde;es?</div><br>
+      <div class="msg text-center">Quer receber novidades <br>e promo&ccedil;&otilde;es exclusivas?</div><br>
       <form id="formPopup" name=FormNewsletter method=GET action="Newsletter.asp" onSubmit="return ValidaNew();"/>
         <div class="form-group">
           <input type=hidden name=IDLoja value="<idloja>">
