produtos sem variação de logo

--- a/htm/estiloproduto.htm
+++ b/htm/estiloproduto.htm
@@ -272,7 +272,7 @@ FCGrid$.myOptions = {
   nameDescriptor : { 
     cor : 'Cor',
     adicional1 : 'Tamanho',
-    adicional2 : 'Acabamento',
+    adicional2 : 'Descritor 2',
     adicional3 : 'Descritor 3',
     adicionalD1 : 'Descritor 4',
     adicionalD2 : 'Descritor 5',
@@ -281,7 +281,7 @@ FCGrid$.myOptions = {
   textDescriptor : {
     cor : 'Selecione a cor',
     adicional1 : 'Selecione o tamanho',
-    adicional2 : 'Selecione o acabamento',
+    adicional2 : 'Selecione',
     adicional3 : 'Selecione',
     adicionalD1 : 'Selecione',
     adicionalD2 : 'Selecione',
